@@ -1,14 +1,13 @@
 # Created by Jevoom
 #
-# 26-Oct-2012
-#   Added relative paths to targets that can take /usr/ or /usr/local as their root.
-#   Got rspec tests to work
+# 15-Nov-2012
+#   Ensure new users/groups are remember for subsequent user/group tests
 
 module Jeni
-  # version set to 0.2.1
-  Version = '0.2.1'
-  # date set to 26-Oct-2012
-  Version_Date = '26-Oct-2012'
-  #ident string set to: jeni-0.2.1 26-Oct-2012
-  Ident = 'jeni-0.2.1 26-Oct-2012'
+  # version set to 0.2.2
+  Version = '0.2.2'
+  # date set to 15-Nov-2012
+  Version_Date = '15-Nov-2012'
+  #ident string set to: jeni-0.2.2 15-Nov-2012
+  Ident = 'jeni-0.2.2 15-Nov-2012'
 end
