@@ -1,10 +1,0 @@
-# Author: Me
-# Created at: 10:28 14-09-12
-
-module Amodule
-  class Aclass
-    def amethod
-      puts "Welcome and well met"
-    end
-  end
-end
